log/build_2023-03-30_22-48-26/project3/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/msappington11/ros2_ws/csce452-project3/install/project3/lib/python3.10/site-packages/project3/people.py", line 102
    self.people_count_current.publish((Int64)current_people_int)
                                       ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

